@@ -88,7 +88,7 @@ Click on a key to get more information.
 ** <<config-stress-monitor-system-cpu-stress-threshold>>
 ** <<config-stress-monitor-system-cpu-relief-threshold>>
 * <<config-core>>
-** <<config-active>>
+** <<config-recording>>
 ** <<config-instrument>>
 ** <<config-service-name>>
 ** <<config-service-node-name>>
@@ -161,7 +161,7 @@ Click on a key to get more information.
 A boolean specifying whether the circuit breaker should be enabled or not. 
 When enabled, the agent periodically polls stress monitors to detect system/process/JVM stress state. 
 If ANY of the monitors detects a stress indication, the agent will become inactive, as if the 
-<<config-active>> configuration option has been set to `false`, thus reducing resource consumption to a minimum. 
+<<config-recording>> configuration option has been set to `false`, thus reducing resource consumption to a minimum. 
 When inactive, the agent continues polling the same monitors in order to detect whether the stress state 
 has been relieved. If ALL monitors approve that the system/process/JVM is not under stress anymore, the 
 agent will resume and become fully functional.
@@ -330,16 +330,19 @@ monitor to decide that the CPU stress has been relieved.
 === Core configuration options
 // This file is auto generated. Please make your changes in *Configuration.java (for example CoreConfiguration.java) and execute ConfigurationExporter
 [float]
-[[config-active]]
-==== `active`
+[[config-recording]]
+==== `recording`
 
-A boolean specifying if the agent should be active or not.
-When active, the agent instruments incoming HTTP requests, tracks errors and collects and sends metrics.
-When inactive, the agent works as a noop, not collecting data and not communicating with the APM sever.
+A boolean specifying if the agent should be recording or not.
+When recording, the agent instruments incoming HTTP requests, tracks errors and collects and sends metrics.
+When not recording, the agent works as a noop, not collecting data and not communicating with the APM sever,
+except for polling the central configuration endpoint.
 As this is a reversible switch, agent threads are not being killed when inactivated, but they will be 
 mostly idle in this state, so the overhead should be negligible.
 
 You can use this setting to dynamically disable Elastic APM at runtime.
+
+The key of this option used to be `active`. The old key still works but is now deprecated.
 
 
 [options="header"]
@@ -352,7 +355,7 @@ You can use this setting to dynamically disable Elastic APM at runtime.
 [options="header"]
 |============
 | Java System Properties      | Property file   | Environment
-| `elastic.apm.active` | `active` | `ELASTIC_APM_ACTIVE`
+| `elastic.apm.recording` | `recording` | `ELASTIC_APM_RECORDING`
 |============
 
 // This file is auto generated. Please make your changes in *Configuration.java (for example CoreConfiguration.java) and execute ConfigurationExporter
@@ -1992,7 +1995,7 @@ The default unit for this option is `ms`.
 # A boolean specifying whether the circuit breaker should be enabled or not. 
 # When enabled, the agent periodically polls stress monitors to detect system/process/JVM stress state. 
 # If ANY of the monitors detects a stress indication, the agent will become inactive, as if the 
-# <<config-active>> configuration option has been set to `false`, thus reducing resource consumption to a minimum. 
+# <<config-recording>> configuration option has been set to `false`, thus reducing resource consumption to a minimum. 
 # When inactive, the agent continues polling the same monitors in order to detect whether the stress state 
 # has been relieved. If ALL monitors approve that the system/process/JVM is not under stress anymore, the 
 # agent will resume and become fully functional.
@@ -2073,19 +2076,22 @@ The default unit for this option is `ms`.
 # Core                                     #
 ############################################
 
-# A boolean specifying if the agent should be active or not.
-# When active, the agent instruments incoming HTTP requests, tracks errors and collects and sends metrics.
-# When inactive, the agent works as a noop, not collecting data and not communicating with the APM sever.
+# A boolean specifying if the agent should be recording or not.
+# When recording, the agent instruments incoming HTTP requests, tracks errors and collects and sends metrics.
+# When not recording, the agent works as a noop, not collecting data and not communicating with the APM sever,
+# except for polling the central configuration endpoint.
 # As this is a reversible switch, agent threads are not being killed when inactivated, but they will be 
 # mostly idle in this state, so the overhead should be negligible.
 # 
 # You can use this setting to dynamically disable Elastic APM at runtime.
+# 
+# The key of this option used to be `active`. The old key still works but is now deprecated.
 #
 # This setting can be changed at runtime
 # Type: Boolean
 # Default value: true
 #
-# active=true
+# recording=true
 
 # A boolean specifying if the agent should instrument the application to collect performance metrics for the app. When set to false, Elastic APM will not affect your application at all.
 # 
